--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <title>muster demo</title>
 <link rel=stylesheet href=style.css>
 <script src=http://code.jquery.com/jquery-1.5.2.min.js></script>
