--- a/javascript/index.html
+++ b/javascript/index.html
@@ -2,6 +2,6 @@
 <title>muster demo</title>
 <link rel=stylesheet href=style.css>
 <script src=http://code.jquery.com/jquery-1.5.2.min.js></script>
-<script src=jquery.muster.js></script>
 <script src=muster.js></script>
+<script src=muster.currentlyfunded.js></script>
 
