--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <title>Muster</title>
+<style>
+  pre {
+    white-space: pre-wrap;
+  }
+</style>
 <script src=http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js></script>
 <script src=muster.js></script>
 <script src=muster.app.js></script>
