Do #64: generic table sort

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,8 +15,8 @@
     vertical-align: top;
     padding: 5px;
   }
-  tr:nth-child(odd) {
-    background: #ddd;
+  thead th, tbody tr:nth-child(even) {
+    background: #eee;
   }
 </style>
 <script src=http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js></script>
