Implement #66: reversible table sort

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,6 +18,15 @@
   thead th, tbody tr:nth-child(even) {
     background: #eee;
   }
+  thead th {
+    border: 3px solid #eee;
+  }
+  thead th.sorted {
+    border-bottom-color: #ccc;
+  }
+  thead th.rsorted {
+    border-top-color: #ccc;
+  }
 </style>
 <script src=http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js></script>
 <script src=muster.js></script>
