Do #68: Allow defining parent and auto update in toTable method

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <title>Muster</title>
+
 <style>
   body {
     font-family: sans-serif;
@@ -28,6 +30,10 @@
     border-top-color: #ccc;
   }
 </style>
+
+<div id=researchInterests></div>
+<div id=itgdd></div>
+
 <script src=http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js></script>
 <script src=muster.js></script>
 <script src=muster.app.js></script>
